fixed overflow issue

--- a/scss/blog.scss
+++ b/scss/blog.scss
@@ -128,7 +128,7 @@
     .post-content {
       //for code vlocks
       p {
-        overflow-x: scroll;
+        //overflow-x: scroll;
       }
       pre {
         display: block;
